--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# Google App Engine generated folder
-appengine-generated/
+api-env/
+__pycache__/
+bash/
+model/
+src/__pycache__/
+service/
+start_up.sh
+app.yaml
